syntax = "proto3";

package pb3;
option go_package = "pb/example";

message Item {
	repeated string id = 1;
	bool hasSub = 2;
	repeated int32 value = 3;
	map<string, int32> extra = 4;
	repeated Item subItems = 5;
}

message NestedExampleReq {
	repeated Item items = 1;
}

message NestedExampleResp {
	repeated Item items = 1;
}

service Service {
	rpc Example(NestedExampleReq) returns (NestedExampleResp);
}
